login google y facebook 0.0.3

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,8 @@
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:paddingLeft="30dp"/>
+        android:paddingLeft="30dp"
+        android:onClick="callSignInGoogle"/>
 
     <Button
         android:id="@+id/btSignFacebook"
@@ -115,5 +116,6 @@
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:paddingLeft="30dp"/>
+        android:paddingLeft="30dp"
+        android:onClick="callSignInFacebook"/>
 </LinearLayout>
