--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -5,5 +5,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">8dp</item>
     </style>
+    <style name="NumberPickerTheme" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/white</item>
+        <!-- To remove divider of the number picker -->
+        <item name="colorControlNormal">@android:color/transparent</item>
+        <!--<item name="colorControlNormal">@color/gray_dark</item>-->
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:background">@color/gray_dark</item>
+        <item name="android:textSize">30sp</item>
+    </style>
 
 </resources>
