--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
 
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black_trans</item>
+        <item name="android:statusBarColor" tools:targetApi="1">@color/black_trans</item>
 
 
 
